# pb2dantic

./: README.md  TODO.md  requirements.txt  setup.cfg
pb2dantic/: __init__.py  generate.py  model_base.py  proto_model.py
pb2dantic/pydantic_gen/: __init__.py  field.py  model.py  module.py  str_utils.py
tests/: build_proto.sh  conftest.py  test.proto  test_complex_message.py  test_output.py  test_pb2.py  test_simple_message.py  test_utils.py
