[metadata]
name = pb2dantic
version = 0.0.1
description = pydantic models for pb2 types
long_description = file: README.md
long_description_content_type = text/markdown
author = Valentin Denisenkov
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Source=https://github.com/vdnsnkv/pb2dantic
    Tracker=https://github.com/vdnsnkv/pb2dantic/issues

[options]
packages = find:
py_modules = py
python_requires = >=3.8
install_requires =
    pydantic>=1.9
    grpcio>=1.47
    grpcio-tools>=1.47
setup_requires =
    setuptools
    setuptools-scm>=6.0
zip_safe = no

[options.packages.find]
exclude=tests*

[options.extras_require]
testing =
    pytest>=7.2.0
dev =
    black>=22.10.0

[check-manifest]
ignore =
    tests/
